--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,6 +13,7 @@ jobs:
             - uses: actions/checkout@v3
             - run: npm ci && npm run build
             - uses: FirebaseExtended/action-hosting-deploy@v0
+              run: firebase experiments:enable webframeworks
               with:
                   repoToken: '${{ secrets.GITHUB_TOKEN }}'
                   firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SURGICAL_BLOODLOSS }}'
