--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,9 +13,10 @@ jobs:
             - uses: actions/checkout@v3
             - run: npm ci && npm run build
             - uses: FirebaseExtended/action-hosting-deploy@v0
-              run: firebase experiments:enable webframeworks
               with:
                   repoToken: '${{ secrets.GITHUB_TOKEN }}'
                   firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SURGICAL_BLOODLOSS }}'
                   channelId: live
                   projectId: surgical-bloodloss
+              env:
+                  FIREBASE_CLI_EXPERIMENTS: webframeworks
