--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "firebase": "^10.7.1",
-    "next": "14.0.4",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1"
